# jenerals

./: .gitignore  .pylintrc  LICENSE  PROPOSAL.md  README.md  demo-video.txt  justfile  pyproject.toml
proposal/: TP1Update.md  proposal.md
src/: generals.py  main.py
src/classes/: board.py  border.py  button.py  cell.py  message.py  move.py  player.py  textInput.py
src/events/: appStart.py  drawAll.py  keyPress.py  mouseDrag.py  mousePress.py  mouseRelease.py  step.py
src/objects/: accentedLabel.py  background.py  board.py  border.py  cell.py  game.py  leaderboard.py  premoves.py  startScreen.py  turnCounter.py
src/utils/: addTuple.py  args.py  cliFlags.py  colors.py  floodFill.py  image.py  ip.py  legal.py  premoves.py  sockets.py  tuple.py
