[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jenerals"
version = "0.0.1"
authors = [{ name = "Eric Shen" }]
description = "generals.io clone in python using cmu_graphics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["cmu_graphics==1.1.25", "asyncio==3.4.3"]
